--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.4"
+    "react-hook-form": "^7.47.0",
+    "sass": "^1.69.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
@@ -27,6 +30,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "lucide-react": "^0.288.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
