--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "sass": "^1.69.4",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@material-tailwind/react": "^2.1.4",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
