--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-simple-star-rating": "^5.1.7",
     "sass": "^1.69.4",
     "swiper": "^11.0.2",
     "tailwind-merge": "^1.14.0",
@@ -43,6 +44,8 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-stars": "^2.2.5",
     "tailwindcss": "^3"
   }
 }
