--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-loading": "^2.0.3",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.69.4",
     "swiper": "^11.0.2",
