--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -24,7 +25,8 @@
     "swiper": "^11.0.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.3.2",
