--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jwt-decode": "^4.0.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -33,6 +34,7 @@
     "@material-tailwind/react": "^2.1.4",
     "autoprefixer": "^10",
     "axios": "^1.5.1",
+    "cookies-next": "^4.0.0",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.5.6",
