--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "jwt-decode": "^4.0.0",
+    "mongodb": "^6.2.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
